package com.jmontano.patterndesign.creational.factory;

/**
 * @author Juan Montaño
 */
public interface Payment {

    void doPayment();
}
